namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-system
  labels:
    name: ticketing-system
